--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 The Critical Thinker's Paper - https://criticalthinkers.github.io/
 
-(Generated from: https://github.com/criticalthinkers/ctp)
+(Generated from https://github.com/criticalthinkers/criticalthinkers)
